--- a/ShopFlowers/cart/templates/cart.html
+++ b/ShopFlowers/cart/templates/cart.html
@@ -51,7 +51,7 @@
 
                     <div class="cart-summa-price">
                         <span class="summa">{{ cart.sum_cart }}₽</span><br>
-                        <span class="price">{{ cart.flowers.price }}₽ за 1шт.</span><span></span>
+                        <span class="price">{{ cart.flowers.price }}₽ за 1шт.</span>
                     </div>
 
                     <div class="cart-remove">
