--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -58,8 +58,11 @@
 
     {% endblock base_content %}
     <section class="social-networks">
-            <img src="{% static 'icons/icons_telegram.jpg' %}">
-            <img src="{% static 'icons/icons_instagram.jpg' %}">
+        <div class="social-networks-info">
+            <p>Будь в курсе событий, подпишись на наши социальные сети</p>
+            <a href="#"><img src="{% static 'icons/icons_telegram.jpg' %}" width="50px" height="50px"></a>
+            <a href="#"><img src="{% static 'icons/icons_instagram.jpg' %}" width="50px" height="50px"></a>
+        </div>
     </section>
 
     <section class="basement">
@@ -83,8 +86,6 @@
             <p>По Красноярску 8(999)-000-0000</p>
             <p>Адрес: г. Красноярск, ул. Чайковского 20 пом.205</p>
             <p>Галерея зеленых пейзажей Fresh Company</p>
-            <img src="{% static 'icons/icons_telegram.jpg' %}">
-            <img src="{% static 'icons/icons_instagram.jpg' %}">
         </div>
     </section>
 
