--- a/ShopFlowers/flowers/static/css/flowers_style.css
+++ b/ShopFlowers/flowers/static/css/flowers_style.css
@@ -4,6 +4,19 @@ a {
     border-bottom: 2px solid rgba(67, 102, 205, 0);
 }
 
+@font-face {
+    font-family: 'myFontMirra';
+    src: url('../fonts/Mirra.otf');
+}
+
+/* Ответ на поиск шаблон flowers_search где base */
+.answer-search {
+    margin: -100px 0 0 0;
+    text-align: center;
+    font-size: 13pt;
+}
+
+/* Хлебные крошки */
 .breadcrumb {
     background-image: url(../images/fon-flowers2.png);
     padding: 5px 0 5px 365px;
@@ -25,11 +38,7 @@ a {
     border-bottom: 2px solid rgba(67, 102, 205, 0);
 }
 
-@font-face {
-  font-family: 'myFontMirra';
-  src: url('../fonts/Mirra.otf');
-}
-
+/* Шаблон flowers_category */
 .category-list {
     background: rgba(209, 216, 184, 1);
     text-align: center;
@@ -45,12 +54,24 @@ a {
     padding-top: 25px;
 }
 
+/* Сылки на страницы каталога */
+/* секция */
 .hello {
     background-image: url(../images/fon-flowers1.png);
     background-size: contain;
     height: 300px;
 }
 
+/* Вкладыши в каталоге */
+.cat-plant, .cat-pots, .cat-care {
+    width: 340px;
+    height: 20px;
+    padding-top: 5px;
+    text-align: center;
+    color: rgba(40, 49, 6, 1);
+}
+
+/* див с каталогом */
 .hello-text {
     margin: 0 20% 0 20%;
     width: 60%;
@@ -59,18 +80,14 @@ a {
     color: rgba(40, 49, 6, 1);
 }
 
-.answer-search {
-    margin: -100px 0 0 0;
-    text-align: center;
-    font-size: 13pt;
-}
-
+/* Надпись */
 .hello-text .p1 {
     text-align: center;
     font-family: 'myFontMirra';
     font-size: 60pt;
 }
 
+/* Секция с карточками товаров и фильтрами */
 .shop {
     background-image: url(../images/fon-flowers3.png);
     background-size: cover;
@@ -78,6 +95,7 @@ a {
     grid-template-columns: 1fr 4fr;
 }
 
+/* Сторона с карточками товаров */
 .flowers-list {
     padding: 20px;
     display: grid;
@@ -92,6 +110,26 @@ a {
     height: 300px;
 }
 
+/* Если дисконт то карточка товара с ленточкой*/
+.product-discount {
+	position: absolute; /*Для ленточки относительно flowers*/
+	left: 180px;
+	top: 0px;
+	filter: drop-shadow(2px 3px 2px rgba(15, 15, 15, 1));
+}
+
+.product-discount span {
+	display: block;
+	color: rgba(40, 49, 6, 1);
+	font-size: 16px;
+	text-align: center;
+	background: rgba(199, 194, 171, 1);
+	width: 40px;
+	line-height: 56px;
+	clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%); /*создает область отсечения 0 0, 100% 0, 100% 90%, 50% 95%, 0 100%;*/
+}
+
+/* Одна карточка товара */
 .flower {
     position: relative;  /*Для ленточки относительно карточки товара*/
     border-radius: 20px;
@@ -99,20 +137,55 @@ a {
     background: rgba(247, 247, 247, 0.5);
 }
 
+/* Свойства  */
 .flower-detail {
     border-radius: 0 0 20px 20px;
     background: rgba(255, 255, 255, 1);
     padding: 10px;
     text-align: center;
+    color: rgba(40, 49, 6, 1);
 }
 
+/* Имя товара  и цена если не дисконт */
 .p-text {
     font-family: 'myFontMirra';
     font-size: 11pt;
     font-weight: bold;
     text-align: center;
+    color: rgba(40, 49, 6, 1);
 }
 
+/* Див с ценой если дисконт */
+.flower-price {
+    margin-bottom: 10px;
+}
+
+/* Цена если дисаконт */
+.p-price {
+    font-family: 'myFontMirra';
+    font-size: 11pt;
+    font-weight: bold;
+    color: rgba(40, 49, 6, 1);
+    text-align: start;
+    width: 100px;
+    margin-left:10px;
+    display: inline;
+    text-decoration: line-through solid 2px rgba(190, 55, 54, 1);
+}
+
+/* Цена если дисаконт */
+.p-price-discount {
+    display: inline;
+    width: 100px;
+    font-family: 'myFontMirra';
+    font-size: 14pt;
+    font-weight: bold;
+    color: rgba(40, 49, 6, 1);
+    text-align: end;
+    margin-right: 10px;
+}
+
+/* Кнопка для корзины */
 .cart-button {
     border-style: none;
     background-color: rgba(114, 121, 88, 1);
@@ -139,10 +212,12 @@ a {
     cursor: pointer;
 }
 
+/* Тень при наведении на карточку товара */
 .flower:hover {
     box-shadow: 10px 10px 30px rgba(119, 126, 92, 1);
 }
 
+/* Фильтры */
 .shop>.filters {
     padding: 20px;
     justify-self: center;
@@ -153,6 +228,7 @@ a {
     text-align: center;
 }
 
+/* Пагинация */
 .list-pages {
     text-align: center;
     grid-column: 2 / 2;
@@ -172,7 +248,6 @@ a {
     grid-template-columns: repeat(3, 1fr);
 
 }
-
 /* .cat-plant { */
     /* width: 340px;
     height: 20px; */
@@ -184,29 +259,3 @@ a {
     text-align: center;
     color: rgba(40, 49, 6, 1); */
 /* } */
-
-.cat-plant, .cat-pots, .cat-care {
-    width: 340px;
-    height: 20px;
-    padding-top: 5px;
-    text-align: center;
-    color: rgba(40, 49, 6, 1);
-}
-
-.product-discount {
-	position: absolute; /*Для ленточки относительно flowers*/
-	left: 180px;
-	top: 0px;
-	filter: drop-shadow(2px 3px 2px rgba(0, 0, 0, 0.5));
-}
-
-.product-discount span {
-	display: block;
-	color: rgba(40, 49, 6, 1);
-	font-size: 16px;
-	text-align: center;
-	background: rgba(199, 194, 171, 1);
-	width: 40px;
-	line-height: 56px;
-	clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 95%, 0 100%);
-}
