--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -7,31 +7,37 @@
 
 {% block base_content %}
 
-    <section class="hello">
-        <div class="hello-text">
-            <p class="p1">Каталог</p>
-            <div class="list-cat">
-                <div class="cat-plant" style="
-                    border: 1px solid rgba(114, 121, 88, 1);
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                    border-bottom: none;"><a href="{% url 'flowers' %}">Комнатные растения</a></div>
+<section class="hello">
+    <div class="hello-text">
+        <p class="p1">Каталог</p>
+        <div class="list-cat">
+            <div class="cat-plant" style="
+                border: 1px solid rgba(114, 121, 88, 1);
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+                border-bottom: none;">
+                <a href="{% url 'flowers' %}">Комнатные растения</a>
+            </div>
 
-                <div class="cat-pots" style="border-bottom: 1px solid rgba(114, 121, 88, 1);"><a href="{% url 'pots' %}">Горшки и кашпо</a></div>
+            <div class="cat-pots" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
+                <a href="{% url 'pots' %}">Горшки и кашпо</a>
+            </div>
 
-                <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);"><a href="{% url 'care' %}">Уход за растениями</a></div>
+            <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
+                <a href="{% url 'care' %}">Уход за растениями</a>
             </div>
         </div>
-    </section>
-
-    <div class="breadcrumb">
-        <ul>
-            <li class="breadcrumb_item"><a href="{% url 'main' %}">Главная /</a></li>
-            <li class="breadcrumb_item"><a href="{% url 'flowers' %}">Комнатные растения /</a></li>
-        </ul>
     </div>
+</section>
 
-    <section class="shop">
+<div class="breadcrumb">
+    <ul>
+        <li class="breadcrumb_item"><a href="{% url 'main' %}">Главная /</a></li>
+        <li class="breadcrumb_item"><a href="{% url 'flowers' %}">Комнатные растения /</a></li>
+    </ul>
+</div>
+
+<section class="shop">
         <div class="filters">
             <p>Фильтры</p>
 <!--            <form action="{% url 'filter' %}" method="get">-->
@@ -79,11 +85,19 @@
 
                     <div class="flower-detail">
                         <p class="p-text">{{ flower.title }}</p>
-                        <p class="p-text">от {{ flower.calculate_the_price }}₽</p>
+                        {% if flower.is_discount %}
+                            <div class="flower-price">
+                                <p class="p-price-discount">от {{ flower.calculate_the_price }}₽</p>
+                                <p class="p-price">{{ flower.price }}₽</p>
+                            </div>
+                        {% else %}
+                            <p class="p-text">от {{ flower.calculate_the_price }}₽</p>
+                        {% endif %}
+
                         {% if flower.quantity > 0 %}
                             <a href="{% url 'add-cart' flower.id %}" class="cart-button">Добавить в корзину</a>
                         {% else %}
-                            <p style="margin: 5px;">Нет в наличии</p>
+                            <p style="margin: 5px; color: rgba(40, 49, 6, 1);">Нет в наличии</p>
                         {% endif %}
                     </div>
                 </div>
